--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,4 +1,11 @@
 :root {
+  --bg: #000;
+  --bg-panel: #000;
+  --color-headings: #fff;
+  --color-text-opactiy: rgba(255, 255, 255, 0.6);
+}
+
+[data-theme="dark"] {
   --bg: #fff;
   --bg-panel: #fff;
   --color-headings: #110d0d8b;
