--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -3,6 +3,8 @@
   --bg-panel: #000;
   --color-headings: #fff;
   --color-text-opactiy: rgba(255, 255, 255, 0.6);
+  --color-text-primary: #fff;
+  --color-text-secondary: #000;
 }
 
 [data-theme="dark"] {
@@ -10,4 +12,6 @@
   --bg-panel: #fff;
   --color-headings: #110d0d8b;
   --color-text-opactiy: rgba(44, 44, 44, 0.6);
+  --color-text-primary: #000;
+  --color-text-secondary: #fff;
 }
