--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,16 +1,14 @@
 :root {
-  :root {
-    --size-10: 0.625rem;
-    --size-14: 0.875rem;
-    --size-16: 1rem;
-    --size-18: 1.125rem;
-    --size-20: 1.25rem;
-    --size-30: 1.875rem;
-    --size-40: 2.5rem;
-    --size-50: 3.125rem;
-    --size-100: 6.25rem;
-    --size-150: 9.375rem;
-  }
+  --size-10: 0.625rem;
+  --size-14: 0.875rem;
+  --size-16: 1rem;
+  --size-18: 1.125rem;
+  --size-20: 1.25rem;
+  --size-30: 1.875rem;
+  --size-40: 2.5rem;
+  --size-50: 3.125rem;
+  --size-100: 6.25rem;
+  --size-150: 9.375rem;
 }
 
 *,
@@ -33,7 +31,6 @@ body {
 
 a {
   text-decoration: none;
-  pointer-events: none;
   background: transparent;
 }
 
@@ -90,10 +87,14 @@ img {
 }
 
 .btn:hover {
-  background-color: #999;
-  color: #fff;
-  transform: scale(1.1);
-  box-shadow: 5px 3px 27px -2px rgba(22, 22, 22, 0.2);
+  background-color: rgba(200, 200, 200, 0.4);
+  color: #333;
+  /* box-shadow: 5px 3px 27px -2px rgba(22, 22, 22, 0.2); */
+}
+
+.btn:active {
+  background-color: var(--bg-black);
+  color: var(--font-color-light);
 }
 
 @media all and (min-width: 768px) {
