--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,24 +18,98 @@
   margin-right: auto;
 }
 
-.navbar-nav li {
+.navbar-nav a {
   padding: 0.825rem 1rem;
   cursor: pointer;
+  color: var(--font-color-white);
 }
-.navbar-nav li:hover {
+.navbar-nav a:hover {
   background-color: var(--bg-white);
   color: var(--font-color-dark);
 }
 
 .list-container {
-  display: inline-block;
-  background-color: beige;
-  border: 1px solid black;
-  width: 400px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: var(--size-20);
 }
 
-.list-tab {
+.to-do-list {
+  position: relative;
+  width: 450px;
+  border: 1px solid black;
+  box-shadow: 0px 15px 18px 0px rgba(0, 0, 0, 0.2);
+}
+
+.list-header {
+  padding: 1rem;
+  background-color: var(--bg-black);
+  color: var(--bg-white);
+  font-size: var(--size-20);
+  position: relative;
+  text-align: center;
+}
+
+.list-header button {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--bg-black);
+  color: var(--bg-white);
+  font-size: var(--size-20);
+  font-weight: 400;
+  padding: 0.3rem 0.6rem;
+  border: 1px solid var(--bg-white);
+  border-radius: 8px;
+}
+
+.list-items .list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--size-10);
+}
+
+.list-items .list-item:not(:first-child) {
+  border-top: 1px solid black;
+}
+
+.list-items .list-item input {
+  display: none;
+}
+
+.list-items .list-item.edit-mode .item-text {
+  display: none;
+}
+
+.list-items .list-item.edit-mode input {
+  display: block;
+}
+
+.list-item div {
+  line-height: 20px;
+}
+
+.list-item input {
+  font-size: var(--size-16);
+  line-height: 30px;
+}
+
+.list-item div,
+.list-item input {
+  color: var(--font-color-dark);
+}
+
+.list-item .btn-group {
+  display: flex;
+}
+
+.list-item .btn {
+  margin: 0 3px;
+}
+
+.open-list-tab {
   position: absolute;
   top: 0;
   right: 0;
