--- a/src/css/base.css
+++ b/src/css/base.css
@@ -75,7 +75,7 @@ img {
 }
 
 .btn {
-  background: none;
+  background: white;
   border: 2px solid black;
   padding: 0.535rem 1.5rem;
   border-radius: 50rem;
