--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,6 +28,7 @@
   color: var(--font-color-dark);
 }
 
+/* TO DO LIST */
 .list-container {
   display: flex;
   justify-content: center;
@@ -75,6 +76,39 @@
 .list-header .add-item-button:active {
   background-color: var(--bg-white);
   color: var(--font-color-dark);
+}
+
+#new-item-container {
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateY(100%);
+  display: none;
+}
+
+#new-item-container.open {
+  display: block;
+}
+
+#new-item-container input {
+  padding: 0.4rem 0.5rem;
+  font-size: var(--size-20);
+  border-radius: 50rem;
+  box-shadow: inset 0px 0px 4px 3px rgba(0, 0, 0, 0.2),
+    0px 0px 2px 2px rgba(255, 255, 255, 0.2);
+  outline: none;
+  border: 1px solid white;
+}
+
+#new-item-container .btn-group {
+  margin: 10px;
+}
+
+#new-item-container .btn-group button {
+  margin: 0 5px;
 }
 
 .list-header .add-item-tooltip {
