refactor navbar links to set to active on click using react techniques. refactor navbar links to be hard coded HTML rather than mapped from an object array to be more compatible with TNavbarActive typing.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,8 @@
   cursor: pointer;
   color: var(--font-color-white);
 }
-.navbar-nav a:hover {
+.navbar-nav a:hover,
+.navbar-nav a.active {
   background-color: var(--bg-white);
   color: var(--font-color-dark);
 }
