--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -9,9 +9,9 @@
   --button-alternative: #01c8a7;
   --font-color-dark: #030303;
   --font-color-bright: #f6f7f9;
-  --font-color-soft: #607082;
-  --background-color-soft: rgba(224, 231, 239, 1);
-  --background-color-faded: rgba(244, 231, 239, 0.2);
+  --font-color-soft: #8b8e91;
+  --background-color-soft: rgb(235, 237, 239);
+  --background-color-faded: rgba(248, 244, 246, 0.3);
   --background-color-form: #20335b;
   --icon-background-soft: rgb(236, 242, 255);
   --icon-background-dark: #677787;
