style btn-primary styles and list-item styles

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -108,4 +108,27 @@ img {
 
 /* test and create btn-primary */
 
+.btn-primary {
+  border-color: #000;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-color: var(--button-base);
+  font-size: var(--size-12);
+  margin: 0 8px;
+  padding: 0.7rem 1.1rem;
+  border-radius: 20px;
+  box-shadow: 0 5px 8px 0px rgba(0, 0, 0, 0.2);
+}
+
+.btn-primary:hover {
+  background-color: var(--button-alternative);
+}
+
+.btn-primary:active {
+  background-color: var(--button-base);
+  position: relative;
+  bottom: -2px;
+}
+
 /* test and create other basic buttons */
