--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,16 +1,17 @@
 /* needs to be tested and adjusted */
 :root {
-  --button-base: #2476fe;
-  --link-highlight: #659fff;
   --bg-bright: #fff;
   --bg-dark: #000;
-  --font-color-base: #6f7e8e;
+  --link-highlight: #659fff;
+  --font-color-base: #2a2b2b;
   --font-base-bold: #5f6267;
-  --button-alternative: #01c8a7;
+  --button-base: #fff;
+  --button-alternative: #ccc;
   --font-color-dark: #030303;
   --font-color-bright: #f6f7f9;
-  --font-color-soft: #8b8e91;
-  --background-color-soft: rgb(235, 237, 239);
+  --font-color-soft: #5b5b5b;
+  --border-color-soft: #666;
+  --background-color-soft: rgb(240, 240, 240);
   --background-color-faded: rgba(248, 244, 246, 0.3);
   --background-color-form: #20335b;
   --icon-background-soft: rgb(236, 242, 255);
