--- a/src/css/to-do-list.css
+++ b/src/css/to-do-list.css
@@ -70,15 +70,22 @@
 }
 
 #to-do-header #add-item-form {
+  --form-scale: 0;
   position: absolute;
   bottom: 0;
   left: 5%;
   right: 5%;
-  transform: translateY(100%);
+  transform: translateY(100%) scale(var(--form-scale));
   background-color: var(--background-color-form);
   flex-direction: column;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  transition: 0.35s transform;
+  transform-origin: top center;
+}
+
+#to-do-header #add-item-form.active {
+  --form-scale: 1;
 }
 
 #add-item-form .input-primary {
