--- a/src/css/to-do-list.css
+++ b/src/css/to-do-list.css
@@ -17,6 +17,7 @@
   line-height: 0.925;
   box-shadow: 0px 0px 2px 2px var(--background-color-faded),
     inset 0px 0px 2px 2px var(--background-color-faded);
+  user-select: none;
 }
 
 #to-do-header .add-item-button:hover {
@@ -45,6 +46,7 @@
   transition: 150ms transform;
   width: max-content;
   transform-origin: center top;
+  z-index: 1;
 }
 
 #to-do-header .add-item-button::before {
@@ -124,8 +126,99 @@
   font-size: var(--size-16);
 }
 
-.item-input-container {
+.list-item .item-input-container {
   display: none;
+}
+.btn-group .edit-button {
+  position: relative;
+}
+
+.btn-group .edit-button::before,
+.btn-group .edit-button::after {
+  --edit-scale: 0;
+  --edit-tooltip-color: #333;
+  --edit-arrow-size: 20px;
+  position: absolute;
+  bottom: -0.25rem;
+  left: 50%;
+  transform: translateY(var(--edit-translateY, 0%)) translateX(-50%)
+    scale(var(--edit-scale));
+  transition: 150ms transform;
+  transform-origin: top center;
+}
+
+.btn-group .edit-button::before {
+  --edit-translateY: calc(100% + var(--edit-arrow-size));
+  content: attr(data-tooltip);
+  width: 50px;
+  height: 50px;
+  background: var(--edit-tooltip-color);
+  color: #fff;
+  padding: 0.5rem;
+  width: max-content;
+  border-radius: 0.3rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.btn-group .edit-button:hover::after,
+.btn-group .edit-button:hover::before {
+  --edit-scale: 1;
+}
+
+.btn-group .edit-button::after {
+  --edit-translateY: calc(1 * var(--edit-arrow-size));
+  content: "";
+  border: var(--edit-arrow-size) solid transparent;
+  border-bottom-color: var(--edit-tooltip-color);
+  transform-origin: bottom center;
+}
+
+.btn-group .delete-button {
+  position: relative;
+}
+
+.btn-group .delete-button::before,
+.btn-group .delete-button::after {
+  --delete-scale: 0;
+  --delete-tooltip-color: #333;
+  --delete-arrow-size: 30px;
+  position: absolute;
+  top: -0.5rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--delete-translate-y, 0))
+    scale(var(--delete-scale));
+  transition: 0.35s transform;
+  border-radius: 0.3rem;
+}
+
+.btn-group .delete-button::before {
+  --delete-translate-y: calc(-100% - var(--delete-arrow-size));
+  content: attr(data-tooltip);
+  background: var(--delete-tooltip-color);
+  width: 50px;
+  height: 50px;
+  padding: 0.5rem;
+  width: max-content;
+  display: flex;
+  align-items: center;
+  color: white;
+  transform-origin: bottom center;
+}
+
+.btn-group .delete-button::after {
+  --delete-translate-y: calc(-1 * var(--delete-arrow-size));
+  content: "";
+  position: absolute;
+  border: var(--delete-arrow-size) solid transparent;
+  border-top-color: var(--delete-tooltip-color);
+  transform-origin: top center;
+}
+
+.btn-group .delete-button:hover::before,
+.btn-group .delete-button:hover::after {
+  --delete-scale: 1;
 }
 
 .list-item.edit-mode .item-input-container {
