--- a/src/css/base.css
+++ b/src/css/base.css
@@ -151,3 +151,49 @@ img {
 }
 
 /* test and create other basic buttons */
+
+/* tooltips */
+
+[data-tooltip] {
+  position: relative;
+}
+
+[data-tooltip]::before,
+[data-tooltip]::after {
+  --scale: 0;
+  --tooltip-color: rgba(51, 51, 51, 0.92);
+  --arrow-size: 16px;
+  position: absolute;
+  width: max-content;
+  top: -0.5rem;
+  left: 50%;
+  color: #fff;
+  transform: translateX(-50%) translateY(var(--translate-y, 0))
+    scale(var(--scale));
+  transition: 0.35s transform;
+}
+
+[data-tooltip]::before {
+  --translate-y: calc(-100% - var(--arrow-size));
+  content: attr(data-tooltip);
+  font-size: var(--size-14);
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  background-color: var(--tooltip-color);
+  transform-origin: bottom center;
+}
+
+[data-tooltip]::after {
+  --translate-y: calc(-1 * var(--arrow-size));
+  content: "";
+  top: -0.536rem;
+  position: absolute;
+  border: var(--arrow-size) solid transparent;
+  border-top-color: var(--tooltip-color);
+  transform-origin: top center;
+}
+
+[data-tooltip]:hover::before,
+[data-tooltip]:hover::after {
+  --scale: 1;
+}
