create ErrorMessage component and add character validations to new item form

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -197,3 +197,11 @@ img {
 [data-tooltip]:hover::after {
   --scale: 1;
 }
+
+/* error messages */
+
+.error-message {
+  margin: var(--size-20);
+  color: var(--message-danger);
+  font-size: var(--size-16);
+}
