change flex-centered css class to flex-and-align in all files

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -91,7 +91,7 @@ img {
   list-style: none;
 }
 
-.flex-centered {
+.flex-and-align {
   display: flex;
   justify-content: center;
   align-items: center;
