--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -3,13 +3,31 @@
     padding: 0;
   }
 
-  #main-header .navbar,
-  .navbar .navbar-nav {
-    flex-direction: column;
+  #main-header .navbar {
+    position: relative;
+  }
+
+  #main-header .navbar-toggler {
+    display: block;
+  }
+
+  [aria-expanded="false"] .x-icon,
+  [aria-expanded="false"] ~ .navbar-nav,
+  [aria-expanded="true"] .trigram {
+    display: none;
+  }
+
+  [aria-expanded="true"] .x-icon,
+  [aria-expanded="true"] ~ .navbar-hav {
+    display: block;
   }
 
   .navbar-nav {
-    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: red;
   }
 
   .navbar-nav li {
