--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,6 +1,8 @@
 @media all and (max-width: 550px) {
   #main-header {
     padding: 0;
+    box-shadow: 0px 0px 2px 2px var(--background-color-faded),
+      inset 0px -2px 12px 2px var(--background-color-faded);
   }
 
   #main-header .navbar {
