finish up screen animations and make sure optimistic rendering functions properly

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -236,3 +236,21 @@ img {
   font-size: var(--size-16);
   color: #fff;
 }
+
+/* animations & transitions */
+
+[data-animation="slideFadeInRight"] {
+  --transition-left: -50%;
+  --transition-duration: 0.35s;
+  transition: var(--transition-duration) all;
+  position: relative;
+  left: var(--transition-left);
+  visibility: hidden;
+  opacity: 0;
+}
+
+[data-animation="slideFadeInRight"].active {
+  --transition-left: 0;
+  visibility: visible;
+  opacity: 1;
+}
