--- a/src/css/portfolio-gallery.css
+++ b/src/css/portfolio-gallery.css
@@ -47,3 +47,79 @@
 .portfolio-filter-nav .filter-link.active {
   color: #495fef;
 }
+
+.portfolio-grid {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3rem 1rem;
+  justify-content: center;
+}
+
+.portfolio-card {
+  position: relative;
+  margin: 0 1rem 1.85rem;
+  max-width: 255px;
+}
+
+.portfolio-card:hover {
+  cursor: pointer;
+}
+
+.card-body img {
+  width: 100%;
+  height: 255px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.card-popup-box {
+  position: absolute;
+  bottom: -20px;
+  left: 20px;
+  right: 20px;
+  transition: 0.4s;
+  z-index: 1;
+  padding: 1.25rem 1.875rem;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.card-popup-box::before {
+  content: "";
+  position: absolute;
+  background-color: var(--bg-bright);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 0.9;
+  border-radius: 8px;
+}
+
+.card-popup-box::before:hover {
+  cursor: pointer;
+}
+
+.portfolio-card:hover .card-popup-box {
+  bottom: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+.card-popup-box > div {
+  color: var(--font-color-soft);
+  font-size: 0.825rem;
+  line-height: 1.63;
+  letter-spacing: 1.63px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.card-popup-box h3 {
+  margin: 0;
+  color: var(--bg-dark);
+  font-size: 1.3125rem;
+  letter-spacing: -0.5px;
+}
