--- a/src/css/portfolio-gallery.css
+++ b/src/css/portfolio-gallery.css
@@ -2,6 +2,10 @@
   justify-content: initial;
 }
 
+.search-container {
+  max-width: 1400px;
+}
+
 .search-container label {
   position: relative;
   display: inline-flex;
