move images folder from public assets directory to src assets directory. Assign individual img srcs for all portfolio cards.

--- a/src/css/portfolio-gallery.css
+++ b/src/css/portfolio-gallery.css
@@ -62,7 +62,7 @@
 .portfolio-card {
   position: relative;
   margin: 0 1rem 1.85rem;
-  max-width: 255px;
+  width: 255px;
 }
 
 .portfolio-card:hover {
