add option for using optimistic rendering method or pesimistic rendering method

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -144,7 +144,7 @@ img {
   background-color: var(--button-alternative);
 }
 
-.btn-primary:active {
+.btn-primary:active:not(:disabled) {
   background-color: var(--button-base);
   position: relative;
   bottom: -2px;
