--- a/src/components/MainHeader/css/base.css
+++ b/src/components/MainHeader/css/base.css
@@ -163,8 +163,6 @@ img {
   color: var(--font-color-bright);
 }
 
-/* WORK ON SECTION BELOW */
-
 /* tooltips */
 
 [data-tooltip] {
@@ -235,14 +233,16 @@ img {
 [data-animation="slideFadeInRight"] {
   --transition-left: -50%;
   --transition-duration: 0.35s;
+  --visibility: hidden;
+  --opacity: 0;
   transition: var(--transition-duration) all;
   left: var(--transition-left);
-  visibility: hidden;
-  opacity: 0;
+  visibility: var(--visibility);
+  opacity: var(--opacity);
 }
 
 [data-animation="slideFadeInRight"].active {
   --transition-left: 0;
-  visibility: visible;
-  opacity: 1;
+  --visibility: visible;
+  --opacity: 1;
 }
