--- a/src/css/base.css
+++ b/src/css/base.css
@@ -142,17 +142,6 @@ img {
   box-shadow: var(--box-shadow-base);
 }
 
-.btn-primary:hover {
-  background-color: var(--button-alternative);
-}
-
-.btn-primary:active:not(:disabled) {
-  background-color: var(--button-base);
-  position: relative;
-  bottom: -2px;
-}
-
-/* test and create other basic buttons */
 .btn-secondary {
   padding: 0 5px;
   border-radius: 8px;
@@ -244,14 +233,16 @@ img {
 [data-animation="slideFadeInRight"] {
   --transition-left: -50%;
   --transition-duration: 0.35s;
+  --visibility: hidden;
+  --opacity: 0;
   transition: var(--transition-duration) all;
   left: var(--transition-left);
-  visibility: hidden;
-  opacity: 0;
+  visibility: var(--visibility);
+  opacity: var(--opacity);
 }
 
 [data-animation="slideFadeInRight"].active {
   --transition-left: 0;
-  visibility: visible;
-  opacity: 1;
+  --visibility: visible;
+  --opacity: 1;
 }
