--- a/src/components/UserInformationForm/css/user-info-form.css
+++ b/src/components/UserInformationForm/css/user-info-form.css
@@ -2,6 +2,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 20px;
+  text-align: center;
 }
 
 .input-field-container .form-left-side,
@@ -27,8 +28,9 @@
   margin-top: 10px;
 }
 
+.user-info-display,
+.phone-input-container,
 .submit-button-container {
+  text-align: center;
   margin-top: 20px;
-  justify-content: center;
-  display: flex;
 }
