complete formating method for phone-number

--- a/src/components/UserInformationForm/css/responsive.css
+++ b/src/components/UserInformationForm/css/responsive.css
@@ -54,4 +54,8 @@
   #user-form-container .input-field-container {
     flex-direction: column;
   }
+
+  #user-form-container .input-field-container .form-left-side {
+    margin-right: 0;
+  }
 }
